[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/QuizLadrao.gd" type="Script" id=1]
[ext_resource path="res://imagens/animacaoDemo-Recovered2.png" type="Texture" id=2]
[ext_resource path="res://Script/QuizLadrao2.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 107.0, 291.0 ],
"_edit_vertical_guides_": [ 381.0, 566.0 ]
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 372, 108 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 584, 290 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 36.0
margin_top = 103.0
margin_right = 381.0
margin_bottom = 394.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 345.0
margin_bottom = 20.0
toggle_mode = true
text = "a"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 345.0
margin_bottom = 44.0
toggle_mode = true
text = "b"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 345.0
margin_bottom = 68.0
toggle_mode = true
text = "c"

[node name="Button4" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 345.0
margin_bottom = 92.0
toggle_mode = true
text = "d"

[node name="Button5" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 345.0
margin_bottom = 116.0
toggle_mode = true
text = "e"

[node name="Button6" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 345.0
margin_bottom = 140.0
toggle_mode = true
text = "f"

[node name="Button7" type="Button" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 345.0
margin_bottom = 164.0
toggle_mode = true
text = "g"

[node name="Button8" type="Button" parent="VBoxContainer"]
margin_top = 168.0
margin_right = 345.0
margin_bottom = 188.0
toggle_mode = true
text = "h"

[node name="Button9" type="Button" parent="VBoxContainer"]
margin_top = 192.0
margin_right = 345.0
margin_bottom = 212.0
toggle_mode = true
text = "i"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 563.0
margin_top = 108.0
margin_right = 908.0
margin_bottom = 399.0

[node name="Button" type="Button" parent="VBoxContainer2"]
margin_right = 345.0
margin_bottom = 20.0
toggle_mode = true
text = "d"

[node name="Button2" type="Button" parent="VBoxContainer2"]
margin_top = 24.0
margin_right = 345.0
margin_bottom = 44.0
toggle_mode = true
text = "h"

[node name="Button3" type="Button" parent="VBoxContainer2"]
margin_top = 48.0
margin_right = 345.0
margin_bottom = 68.0
toggle_mode = true
text = "g"

[node name="Button4" type="Button" parent="VBoxContainer2"]
margin_top = 72.0
margin_right = 345.0
margin_bottom = 92.0
toggle_mode = true
text = "a"

[node name="Button5" type="Button" parent="VBoxContainer2"]
margin_top = 96.0
margin_right = 345.0
margin_bottom = 116.0
toggle_mode = true
text = "f"

[node name="Button6" type="Button" parent="VBoxContainer2"]
margin_top = 120.0
margin_right = 345.0
margin_bottom = 140.0
toggle_mode = true
text = "e"

[node name="Button7" type="Button" parent="VBoxContainer2"]
margin_top = 144.0
margin_right = 345.0
margin_bottom = 164.0
toggle_mode = true
text = "c"

[node name="Button8" type="Button" parent="VBoxContainer2"]
margin_top = 168.0
margin_right = 345.0
margin_bottom = 188.0
toggle_mode = true
text = "i"

[node name="Button9" type="Button" parent="VBoxContainer2"]
margin_top = 192.0
margin_right = 345.0
margin_bottom = 212.0
toggle_mode = true
text = "b"

[node name="Tabs" type="Tabs" parent="."]
margin_left = 396.0
margin_top = 369.0
margin_right = 830.0
margin_bottom = 601.0
drag_to_rearrange_enabled = true

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button9" to="." method="_on_Button9_pressed"]
